--- a/frontend/templates/diagnose/layout.html
+++ b/frontend/templates/diagnose/layout.html
@@ -15,7 +15,7 @@
 <body>
 
     {% block body %}
-    <h2>Please fill the details below as gotten from Mammogram results</h2>
+    <h2>Please fill the details below as gotten from your Mammogram results</h2>
     {% endblock %}
 </body>
 
