--- a/frontend/static/css/result.css
+++ b/frontend/static/css/result.css
@@ -18,12 +18,9 @@ body {
 
 .textPart {
     z-index: 0;
-    margin-top: 10px;
-}
-
-h2{
-    text-align: center;
-    color: rgb(229, 92, 241);
+    margin-top: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .headTitle {
