--- a/frontend/templates/result/result.html
+++ b/frontend/templates/result/result.html
@@ -9,9 +9,19 @@
 <body>
         <div class="imgClass"></div>
 
-        <div class="textPart">
-            <h2>Please find your result below</h2>
-            <p>{{ resultString }}</p>
+        <div class="textPart" style="margin-top: 30px; margin-left: 5%; margin-right: 5%;">
+            <h1 style="color: rgb(229, 92, 241); text-align: center;">Result</h1>
+            <h3 style="color: #008CBA; text-align: center; font-size: 1.5em;">Prediction: {{ resultString }}</h3>
+            <p style="color: #008CBA; font-size: 1.2em;">This has been calculated with the following information:</p>
+            <div class="info" style="text-align: justify; color: white; font-size: 1.5em;">
+                <p class="inform">
+                    {{ test_input }}
+                </p>
+            </div>
+
+            <div>
+                <button type="button">Print Result</button>
+            </div>
         </div>
         
         <footer>
