result page editted

--- a/frontend/templates/result/result.html
+++ b/frontend/templates/result/result.html
@@ -19,7 +19,7 @@
                 </p>
             </div>
 
-            <div>
+            <div style="text-align: right;">
                 <button type="button">Print Result</button>
             </div>
         </div>
